--- a/packages/spark-core/settings/_settings.scss
+++ b/packages/spark-core/settings/_settings.scss
@@ -844,6 +844,7 @@ $sprk-carousel-dot-spacing: $sprk-stack-spacing-misc-a !default;
 $sprk-carousel-dot-selected: $sprk-stepper-icon-box-shadow-selected !default;
 $sprk-carousel-arrow-color: $sprk-white !default;
 $sprk-carousel-arrow-spacing: $sprk-space-m !default;
+$sprk-carousel-arrow-edge-spacing: 0 !default;
 $sprk-carousel-arrow-padding: $sprk-space-m !default;
 $sprk-carousel-narrow-image-max-width: 18.75rem !default;
 $sprk-carousel-arrow-position-breakpoint: 31.25rem !default;
